# sfrmaker

./: .buildinfo  .coveragerc  .doctr-files  .gitattributes  .gitignore  .travis.yml  AUTHORS.rst  AssignRiverElev.py  Assign_and_Route.py  Assign_layers.py  Check_Stream_Routing.py  CleanupRiverCells.py  Consolidate_conductance.py  DISCLAIMER.md  Elevations.py  Example.XML  Finalize_SFR2.py  Finalize_SFR_levelpath.py  Finalize_SFR_revised_OCT.py  Fix_flagged_comids.py  Fix_segment_ends.py  Installing_dependencies.md  JoinRiverElevs.py  LookForCircularRouting.ipynb  MANIFEST.in  Plot_segment_profiles.py  README.md  README.md.orig  Readme.md  RemoveSegmentGaps.ipynb  RouteRiverCells.py  RouteStreamNetwork.py  SFR_arcpy.py  SFR_classes.py  SFR_classes.py.orig  SFR_flow_symbology.lyr  SFR_input.xml  SFR_interactions_graduated_symbology.lyr  SFR_main.py  SFR_main_BR.py  (+66 more)
Examples/: Example_postproc_workflow.ipynb  Example_postproc_workflow2.py  Example_preproc_postproc_workflow.py  PlotSFRresults.ipynb  RenumberSegments.ipynb  SFR_results_visualization_example.ipynb  example_Notebook.ipynb  example_SFRmaker_script.py  make_sfr.py  make_sfr_from_grid_shapefile.py  make_sfr_without_model.py
Notebooks/: ConsolidateConductance.ipynb  Diagnostics.ipynb  Grid_intersection_performance.ipynb  PlotStreamflow.ipynb  RenumberSegments.ipynb  ResetModelTop.ipynb  Rtree_performance.ipynb  addLines.ipynb
Symbology/: SFR_flow_symbology.lyr  SFR_interactions_symbology.lyr
_modules/: index.html
_sources/: examples.rst.txt  index.rst.txt  installation.rst.txt  philosophy.rst.txt  references.rst.txt  release-history.rst.txt
_static/: documentation_options.js
api/: index.html  sfrmaker.flows.html  sfrmaker.grid.html  sfrmaker.lines.html  sfrmaker.mf5to6.html  sfrmaker.observations.html  sfrmaker.preprocessing.html  sfrmaker.sfrdata.html  sfrmaker.utils.html
archive/: Assign_layers.py  Check_Stream_Routing.py  NHDtools.py  SFR_routing_checker.xml  STOP_compare.py  discomb_utilities.py  optimizeSFR.py  sfr_plots.py
ci/: py36.yml  (+4 more)
(+859 files in other folders)
