[build-system]
requires = [
    "setuptools >= 61",
    'tomli; python_version < "3.11"',
]
build-backend = "setuptools.build_meta"

[project]
name = "sfrmaker"
dynamic = ["version"]
authors = [
    { name = "Andrew Leaf", email = "aleaf@usgs.gov" },
    { name = "Mike Fienen", email = "mnfienen@usgs.gov" },
    { name = "Howard Reeves", email = "hwreeves@usgs.gov" },
]
description = "Rapid construction of MODFLOW SFR Package input from hydrography data"
readme = "Readme.md"
keywords = ["MODFLOW", "groundwater", "hydrogeology"]
license = {file = "LICENSE.md"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Hydrology",
]
requires-python = ">=3.10"
dependencies = [
    "geopandas",
    "gis-utils",
    "fiona",
    "flopy",
    "modflow-export",
    "netcdf4",
    "numpy",
    "pandas",
    "pyproj",
    "pyyaml",
    "rasterio",
    "rasterstats",
    "rtree",
    "scipy",
    "shapely",
    "xarray",
]

[project.optional-dependencies]
optional = [
    "matplotlib",

]
test = [
    "codecov",
    "coverage",
    "pytest",
    "pytest-timeout"
]
docs = [
    "matplotlib",
    "modflow-export[optional]",
    "ipython[kernel]",
    "sphinx",
    "numpydoc",
    "nbsphinx",
    "sphinx-copybutton",
    "sphinx-rtd-theme"
]

[project.scripts]
get-modflow = "flopy.utils.get_modflow:cli_main"

[project.urls]
documentation = "https://doi-usgs.github.io/sfrmaker/latest/"
repository = "https://github.com/doi-usgs/sfrmaker"

[tool.setuptools.packages.find]
include = ["sfrmaker", "sfrmaker.*"]

[tool.versioneer]
VCS = "git"
style = "pep440-post"
versionfile_source = "sfrmaker/_version.py"
versionfile_build = "sfrmaker/_version.py"
tag_prefix = "v"
parentdir_prefix = "sfrmaker-"

[tool.pytest.ini_options]
addopts = "--doctest-modules --durations=0"
testpaths = "sfrmaker"
